manifests/bases/networking-config/access-auth-proxy.referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: access-auth-proxy
  namespace: kube-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: access
  to:
    - group: ""
      kind: Service
      name: hubble-ui
