manifests/bases/networking-config/access.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: access
  namespace: access
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - ingress
        - host
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: hubble-ui
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
            app.kubernetes.io/name: openobserve-standalone
      toPorts:
        - ports:
            - port: "5080"
              protocol: TCP
    - toFQDNs:
        - matchName: auth.cloud.test
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: secrets.cloud.test
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
