manifests/bases/networking-config/allow-ingress-proxy-egress.cilium-clusterwide-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-proxy-egress
spec:
  endpointSelector:
    matchExpressions:
      - key: reserved:ingress
        operator: Exists
  egress:
    - toEntities:
        - cluster
        - host
