manifests/bases/networking-config/datastores.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: datastores
  namespace: datastores
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: datastores
