manifests/bases/networking-config/kube-system.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kube-system
  namespace: kube-system
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
        - ports:
            - port: "10250"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s-app: hubble-relay
      toPorts:
        - ports:
            - port: "4245"
              protocol: TCP
