manifests/bases/networking-config/policies.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: policies
  namespace: policies
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
        - host
        - remote-node
  ingress:
    # Allow API Server / Node / KubePrism traffic to Kyverno Webhook
    - fromEntities:
        - kube-apiserver
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9443" # Kyverno admission controller container port
              protocol: TCP
            - port: "443"  # Service port
    # Allow intra-namespace pod communication
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: policies
    # the observability metrics collector scrapes kyverno's metrics-port (:8000)
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
