manifests/bases/networking-config/storage.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: storage
  namespace: storage
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
